--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for SNA-Network
 
+0.04    2009-08-25
+      - Fixed edge deletion in some special cases
+      - Added missing test file to MANIFEST
+
 0.03    2009-07-07
       - Introduced weak component identification
 
