Import of OBRADOVIC/SNA-Network-0.07 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.07
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.07.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for SNA-Network
 
+0.07    2010-07-14
+      - Fixed memory leak in edge deletion
+
 0.06    2010-07-12
       - Fixed bug in edge deletion: edges stayed in node's edge reference list
 
