Import of OBRADOVIC/SNA-Network-0.09 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.09
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.09.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for SNA-Network
 
+0.09  2010-09-01
+      - internal changes to improve speed, API unaffected
+      - use of Object::Tiny::XS for accessors
+
 0.08  2010-07-28
       - Fixed missing dependency Test::Mem::Cycle
       - Added PageRank Algorithm
