Import of OBRADOVIC/SNA-Network-0.12 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.12
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.12.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for SNA-Network
 
+0.12  2010-10-08
+      - added missing test network
+      - linked all submodules in the main documentation
+
 0.11  2010-09-15
       - added algorithm for betweenness centrality
 
