Import of OBRADOVIC/SNA-Network-0.13 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.13
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.13.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for SNA-Network
 
+0.13  2010-11-12
+      - added algorithm for in-core collapse sequence
+
 0.12  2010-10-08
       - added missing test network
       - linked all submodules in the main documentation
