--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for SNA-Network
 
+0.15  2012-08-17
+      - core algorithm accelerated by an order of magnitude
+      - added method total_weight() to SNA::Network
+      - added Louvain community detection algorithm with some basic community handling code
+
 0.14  2012-08-06
       - added direct generators I<new_from_$format> in Guess and Pajek Filters
       - added create_node method with automatic indexing
