Import of OBRADOVIC/SNA-Network-0.17 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.17
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.17.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for SNA-Network
 
+0.17  2012-09-27
+      - fixed the MCMC Generator not to produce multi edges
+
 0.16  2012-09-05
       - added Markov Chain Monte Carlo (MCMC) Generator
 
