Import of OBRADOVIC/SNA-Network-0.19 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.19
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.19.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for SNA-Network
 
+0.19  2013-04-16
+      - added module values and modularity methods
+      - fixed Louvain algorithm's quadratic memory consumption
+
+0.17  2012-10-29
+      - maintenance
+
 0.17  2012-09-27
       - fixed the MCMC Generator not to produce multi edges
 
